# Sensor2RPi

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  ReadMe.txt  docker-compose.yml  sensor_data.db  start_services.sh
MQTTclient/: CMakeLists.txt
MQTTclient/src/: mqtt_client.c
ThingSpeakUploader/: CMakeLists.txt  config.ini
ThingSpeakUploader/src/: config.ini  thingspeak_uploader.c
Webserver/: CMakeCache.txt  CMakeLists.txt
Webserver/src/: index.html  webserver.c
